--- a/ui/package.json
+++ b/ui/package.json
@@ -3,10 +3,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.1",
     "@types/react-modal": "^3.13.1",
+    "@types/react-collapse": "^5.0.1",
     "dashjs": "=4.1.0",
     "libass-wasm": "https://github.com/jellyfin/JavascriptSubtitlesOctopus",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
+    "react-collapse": "^5.1.1",
     "react-dom": "^17.0.1",
     "react-modal": "^3.12.1",
     "react-redux": "^7.2.2",
